// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTagihanBulananTotals > should generate correct tagihan for multiple alats with multiple records each 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat1",
      "01/07/2024 - 10/07/2024",
      "10 HR",
      2,
      6.45,
      4000,
    ],
    [
      "Sewa=200",
      "15/07/2024 - 25/07/2024",
      "11 HR",
      1,
      6.45,
      2200,
    ],
    [
      undefined,
      "28/07/2024 - 31/07/2024",
      "4 HR",
      3,
      6.45,
      2400,
      8600,
    ],
    [],
    [
      "Alat2",
      "03/07/2024 - 14/07/2024",
      "12 HR",
      1,
      9.68,
      3600,
    ],
    [
      "Sewa=300",
      "18/07/2024 - 31/07/2024",
      "14 HR",
      2,
      9.68,
      8400,
      12000,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      20600,
      20600,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      2060,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      18660,
    ],
  ],
}
`;

exports[`generateTagihanBulananTotals > should generate correct tagihan for multiple alats with single record each 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat1",
      "01/07/2024 - 31/07/2024",
      "1 BL",
      1,
      450,
      13950,
      13950,
    ],
    [
      "Sewa=450",
    ],
    [],
    [
      "Alat2",
      "05/07/2024 - 31/07/2024",
      "27 HR",
      2,
      5.16,
      8640,
      8640,
    ],
    [
      "Sewa=160",
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      22590,
      22590,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      100,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      22490,
    ],
  ],
}
`;

exports[`generateTagihanBulananTotals > should generate correct tagihan for multiple records for one alat 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat1",
      "01/07/2024 - 31/07/2024",
      "1 BL",
      2,
      100,
      6200,
    ],
    [
      "Sewa=100",
      "10/07/2024 - 31/07/2024",
      "22 HR",
      2,
      3.23,
      4400,
      10600,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      10600,
      10600,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      100,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      10500,
    ],
  ],
}
`;
